feat: servicos de criacao, atualizacao e busca de apolices ok e tratamentos de exceptions implementados