@@ -8,15 +8,23 @@ import br.com.project.insurance.entity.enums.SituacaoParcela;
 import br.com.project.insurance.mapper.ApoliceMapper;
 import br.com.project.insurance.repository.ApoliceRepository;
 import br.com.project.insurance.service.ApoliceService;
+import br.com.project.insurance.service.exception.ApoliceNaoEncontradaException;
+import br.com.project.insurance.service.exception.FalhaAtualizacaoApoliceException;
+import br.com.project.insurance.service.exception.RequisicaoInvalidaException;
 import jakarta.transaction.Transactional;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ApoliceServiceImpl implements ApoliceService {
 
+    private static final Logger log = LoggerFactory.getLogger(ApoliceServiceImpl.class);
     private final ApoliceRepository apoliceRepository;
 
     public ApoliceServiceImpl(ApoliceRepository apoliceRepository) {
@@ -24,23 +32,53 @@ public class ApoliceServiceImpl implements ApoliceService {
     }
 
     @Override
-    @Transactional(rollbackOn = Exception.class)
+    @Transactional
     public void criarApolice(ApoliceRequest request, Integer usuarioId) {
-        Apolice apolice = ApoliceMapper.toEntity(request, usuarioId);
-        apoliceRepository.save(apolice);
+        try {
+            Apolice apolice = ApoliceMapper.toEntity(request, usuarioId);
+            apoliceRepository.save(apolice);
+        } catch (DataIntegrityViolationException ex) {
+            throw new RequisicaoInvalidaException("Dados inválidos para criar a apólice.");
+        }
+
     }
 
     @Override
     @Transactional(rollbackOn = Exception.class)
     public void atualizarApolice(ApoliceRequest request, Integer usuarioId) {
         if (request.id() == null) {
-            throw new RuntimeException("Id da request não pode ser null"); //Todo -> criar Exception personalizada
+            throw new RequisicaoInvalidaException("Id da request não pode ser null");
         }
 
-        Apolice apolice;
+        try {
+            Apolice apolice = buildApolice(request, usuarioId);
+            apoliceRepository.save(apolice);
+        } catch (ApoliceNaoEncontradaException ex) {
+            throw ex;
+        } catch (Exception e) {
+            log.error("Erro ao atualizar a apolice com ID {}: {}", request.id(), e.getMessage(), e);
+            throw new FalhaAtualizacaoApoliceException("Erro ao atualizar apolice");
+        }
+    }
 
-        apolice = apoliceRepository.findById(request.id())
-                .orElseThrow(() -> new RuntimeException("Apólice não encontrada com id: " + request.id()));
+    @Override
+    public List<ApoliceResponse> buscaApolicePorIdOuTodas(Integer apoliceId) {
+        if(apoliceId != null) {
+            Apolice apolice = apoliceRepository.findById(apoliceId)
+                    .orElseThrow(() -> new ApoliceNaoEncontradaException("Id de apolice não existe"));
+
+            return List.of(ApoliceMapper.toResponse(apolice));
+        }
+
+        return apoliceRepository.findAll()
+                .stream()
+                .map(ApoliceMapper::toResponse)
+                .toList();
+    }
+
+    private Apolice buildApolice(ApoliceRequest request, Integer usuarioId) {
+        Apolice apolice = apoliceRepository.findById(request.id())
+                .orElseThrow(() -> new ApoliceNaoEncontradaException("Apólice não encontrada com id: " + request.id()));
 
         apolice.setDescricao(request.descricao());
         apolice.setCpf(request.cpf());
@@ -69,25 +107,10 @@ public class ApoliceServiceImpl implements ApoliceService {
 
                     return parcela;
 
-                }).toList();
+                }).collect(Collectors.toList());
 
         apolice.setParcelas(parcelas);
-        apoliceRepository.save(apolice);
-    }
-
-    @Override
-    public List<ApoliceResponse> buscaApolicePorIdOuTodas(Integer apoliceId) {
-        if(apoliceId != null) {
-            Apolice apolice = apoliceRepository.findById(apoliceId)
-                    .orElseThrow(() -> new RuntimeException("Id de apolice não existe"));
-
-            return List.of(ApoliceMapper.toResponse(apolice));
-        }
-
-        return apoliceRepository.findAll()
-                .stream()
-                .map(ApoliceMapper::toResponse)
-                .toList();
+        return apolice;
     }
 
 
